--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMxaSXRoDErcOn27alCC04/",
+      "authorship_tag": "ABX9TyO8TWSl7ageBi1d+BeOrWdQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,23 +76,10 @@
         "from plots.chapter4 import *"
       ],
       "metadata": {
-        "id": "bRn0N4y8yesU",
-        "outputId": "88e0a4e7-ea97-4b1b-c532-1adb804d490f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "bRn0N4y8yesU"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading files from GitHub repo to Colab...\n",
-            "Finished!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -135,7 +122,7 @@
           "height": 17
         },
         "id": "DmgDM3-KyoUv",
-        "outputId": "8d8d4d0e-9ac8-4215-f746-e460d43aa788"
+        "outputId": "e7e92b70-5a10-4aa8-daeb-7bed5d1b2cdf"
       },
       "execution_count": 3,
       "outputs": [
@@ -208,7 +195,7 @@
           "height": 541
         },
         "id": "oWEazRLX1lul",
-        "outputId": "c7edde89-5873-4be5-b516-1bcba6809f0f"
+        "outputId": "5bd50859-eb86-4255-94ef-cdbb55115e36"
       },
       "execution_count": 5,
       "outputs": [
@@ -289,7 +276,7 @@
           "height": 329
         },
         "id": "12KECyhm4B4B",
-        "outputId": "d8a8d8a1-786c-4411-d412-0a20f23d0299"
+        "outputId": "5475da47-9417-4c18-98f8-149df977ad33"
       },
       "execution_count": 8,
       "outputs": [
@@ -329,7 +316,7 @@
           "height": 328
         },
         "id": "cj9CKqCW6kI3",
-        "outputId": "c31aeb51-c722-4ea1-b60e-292fb2ab455c"
+        "outputId": "76a5e287-9ce7-4708-ed5f-368a38603d94"
       },
       "execution_count": 10,
       "outputs": [
@@ -374,7 +361,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JMY0-9YY7Rpk",
-        "outputId": "bee76cb3-5ac3-4330-f943-163bdcaa5f0d"
+        "outputId": "b1c172a6-0778-4a83-845b-173a7cbf5af2"
       },
       "execution_count": 11,
       "outputs": [
@@ -402,7 +389,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kX1EFQBU7YmD",
-        "outputId": "66261da7-5a3f-4175-8177-3f0bd230b5f4"
+        "outputId": "a28b67f5-c241-45bc-c12a-06d0f11d563a"
       },
       "execution_count": 12,
       "outputs": [
@@ -445,7 +432,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gqriNhWy8Aoz",
-        "outputId": "de864d49-af08-494d-b80d-07a6fa2b17b8"
+        "outputId": "b934dc41-da69-490f-b2d2-94393197900a"
       },
       "execution_count": 13,
       "outputs": [
@@ -471,7 +458,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vUTp6OyR8Mxw",
-        "outputId": "fe55e694-ea2a-4e06-e48d-75a615ce2fff"
+        "outputId": "edc31acb-f1c4-431b-9125-9729ee560b2b"
       },
       "execution_count": 14,
       "outputs": [
@@ -566,7 +553,7 @@
       ],
       "metadata": {
         "id": "fuhfN92n8QEK",
-        "outputId": "c4361713-1864-431a-baa7-fbffcd3111f5",
+        "outputId": "1899395e-1015-4fb8-cf03-5cfcc07d90de",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -592,7 +579,7 @@
       ],
       "metadata": {
         "id": "LFTvZwXOCilw",
-        "outputId": "dd406b3f-a17a-48dd-babd-402cedb22ea4",
+        "outputId": "630371c9-513c-46bd-ff6d-a39fa2f7c4c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -627,7 +614,7 @@
       ],
       "metadata": {
         "id": "x2kT4tjmCm6k",
-        "outputId": "9ca98583-7ba4-4a8f-952d-1f2db451e06b",
+        "outputId": "08e98493-129a-4551-e2b1-a9e27442ab48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
@@ -689,7 +676,7 @@
       ],
       "metadata": {
         "id": "iCIdFL-YLcHh",
-        "outputId": "efde96ae-3571-4edf-f000-f8ff9f27a6a2",
+        "outputId": "a674f061-cb0e-44f6-bea2-efdd27f90cac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -741,7 +728,7 @@
       ],
       "metadata": {
         "id": "V6V-hZzUJR0S",
-        "outputId": "6909b0c0-e93a-471a-f178-6342b01cc39d",
+        "outputId": "cb9ff859-8613-41bd-a4fe-2fe9d0e4e445",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -801,7 +788,7 @@
       ],
       "metadata": {
         "id": "z7bk2ZrOM6-Y",
-        "outputId": "ec08fe6b-d42c-4b74-f117-3113af8621ba",
+        "outputId": "b089f2aa-895d-4b1f-8cd0-a484089ed065",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -864,7 +851,7 @@
       ],
       "metadata": {
         "id": "egvC-crYOF4k",
-        "outputId": "316214e9-fefc-4eb6-e1d1-1ea16ab146e3",
+        "outputId": "3e34ce20-754c-4357-a8f0-5f23c903b5f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -892,7 +879,7 @@
       ],
       "metadata": {
         "id": "HGyk1qXSPcoM",
-        "outputId": "36f593c7-8c42-4860-f43b-1012b98fb1fa",
+        "outputId": "02850443-5298-41dc-8d98-5e5d81b521ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -937,7 +924,7 @@
       ],
       "metadata": {
         "id": "CN72TS-cP1fr",
-        "outputId": "b83de6f6-97f2-4dd7-a042-c4b3bbcdfbd2",
+        "outputId": "5a0a9492-2021-43ad-9606-4f7afe4d28d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1118,7 +1105,7 @@
       ],
       "metadata": {
         "id": "wukiAlA0xpvu",
-        "outputId": "03094fa2-c105-4d08-97e1-19b325e17615",
+        "outputId": "4bfba843-621f-4946-be49-3a7615dc5294",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1129,7 +1116,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch.utils.data.dataset.Subset at 0x7f2e72048d60>"
+              "<torch.utils.data.dataset.Subset at 0x7fa351e464f0>"
             ]
           },
           "metadata": {},
@@ -1144,7 +1131,7 @@
       ],
       "metadata": {
         "id": "NYLzlM25x2HX",
-        "outputId": "e18a088f-7cc9-4b0e-a8e2-c8f86e143a67",
+        "outputId": "4ef7eeec-3244-48b0-cab3-3d4b0ae31939",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1228,7 +1215,7 @@
       ],
       "metadata": {
         "id": "Nw1igOyhzCfd",
-        "outputId": "175504d8-3c92-4bd1-b65b-8fd91224b493",
+        "outputId": "be514785-b520-46f3-99c7-038bb776f719",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1335,7 +1322,7 @@
     {
       "cell_type": "code",
       "source": [
-        "train_dataset = TransformedDataset(x_train_tensor, y_train_tensor, transform=train_sampler)\n",
+        "train_dataset = TransformedDataset(x_train_tensor, y_train_tensor, transform=train_composer)\n",
         "val_dataset = TransformedDataset(x_val_tensor, y_val_tensor, transform=val_composer)\n",
         "\n",
         "# Builds a loader of each set\n",
@@ -1345,7 +1332,7 @@
       "metadata": {
         "id": "QmgEtHM48a8t"
       },
-      "execution_count": 35,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -1359,9 +1346,335 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Now, we can tackle the imbalance using a different\n",
+        "approach: A weighted sampler.\n",
+        "\n",
+        "The reasoning is pretty much simple, we use\n",
+        "weights for sampling.\n",
+        "\n",
+        "The class with fewer data points (minority class) should get larger weights, while the class with more data points (majority class) should get\n",
+        "smaller weights. This way, on average, we’ll end up with mini-batches containing\n",
+        "roughly the same number of data points in each class: A balanced dataset.\n",
+        "\n",
+        "First, we need to find how imbalanced the dataset is."
+      ],
       "metadata": {
         "id": "7g2j8aDF9hXE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classes, counts = y_train_tensor.unique(return_counts=True)\n",
+        "print(classes, counts)"
+      ],
+      "metadata": {
+        "id": "NxsIACfA9H32",
+        "outputId": "df7675fc-ba38-4366-9d6e-71be6cfe6817",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0., 1.]) tensor([ 80, 160])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, we compute the weights by inverting the counts."
+      ],
+      "metadata": {
+        "id": "M96lNoa-9qvK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weights = 1.0 / counts.float()\n",
+        "weights"
+      ],
+      "metadata": {
+        "id": "2IcKdRkz9rNU",
+        "outputId": "7ccac2be-417a-48a3-f59d-a547fc78148f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.0125, 0.0063])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The minority class should have the largest weight, so each data\n",
+        "point belonging to it gets overrepresented to compensate for the\n",
+        "imbalance.\n",
+        "\n",
+        "\n",
+        "Since there are 240 images in our training set, we need 240 weights."
+      ],
+      "metadata": {
+        "id": "ew4ignkU_ozx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_weights = weights[y_train_tensor.squeeze().long()]\n",
+        "\n",
+        "print(sample_weights.shape)\n",
+        "print(sample_weights[:10])\n",
+        "print(y_train_tensor[:10].squeeze())"
+      ],
+      "metadata": {
+        "id": "3NZ_vKgO_6r3",
+        "outputId": "93c993d5-4b77-464e-a4ff-a1e566c512b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([240])\n",
+            "tensor([0.0063, 0.0063, 0.0063, 0.0063, 0.0063, 0.0125, 0.0063, 0.0063, 0.0063,\n",
+            "        0.0063])\n",
+            "tensor([1., 1., 1., 1., 1., 0., 1., 1., 1., 1.])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s create both the generator and\n",
+        "the sampler now."
+      ],
+      "metadata": {
+        "id": "4Em8C31mBFJu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To ensure reproducibility, need to create and assign a generator to the sampler\n",
+        "generator = torch.Generator()\n",
+        "\n",
+        "weighted_sampler = WeightedRandomSampler(\n",
+        "    weights=sample_weights,  # A sequence of weights\n",
+        "    num_samples=len(sample_weights),\n",
+        "    generator=generator,\n",
+        "    replacement=True     # draws samples with replacement\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "jZetaJs_BF2s"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, let’s (re-)create the data loaders using the weighted sampler with the training set."
+      ],
+      "metadata": {
+        "id": "TxZcHLLFEAB1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_loader = DataLoader(dataset=train_dataset, batch_size=16, sampler=weighted_sampler)\n",
+        "val_loader = DataLoader(dataset=val_dataset, batch_size=16)"
+      ],
+      "metadata": {
+        "id": "Gxwfii27EBod"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s build yet another function to wrap it all up."
+      ],
+      "metadata": {
+        "id": "5HN-Z0K8Em_M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_balanced_sampler(y):\n",
+        "  # Computes weights for compensating imbalanced classes\n",
+        "  classes, counts = y.unique(return_counts=True)\n",
+        "  weights = 1.0 / counts.float()\n",
+        "  sample_weights = weights[y.squeeze().long()]\n",
+        "  # Builds sampler with compute weights\n",
+        "  generator = torch.Generator()\n",
+        "  weighted_sampler = WeightedRandomSampler(\n",
+        "    weights=sample_weights,  # A sequence of weights\n",
+        "    num_samples=len(sample_weights),\n",
+        "    generator=generator,\n",
+        "    replacement=True     # draws samples with replacement\n",
+        "  )\n",
+        "  return weighted_sampler"
+      ],
+      "metadata": {
+        "id": "N3cwuL9eEqH-"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weighted_sampler = make_balanced_sampler(y_train_tensor)"
+      ],
+      "metadata": {
+        "id": "0LBFk6eWFcp6"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Time to set the seed for the generator used in the sampler assigned to the data\n",
+        "loader."
+      ],
+      "metadata": {
+        "id": "rWnfGUGxFynp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_loader.sampler.generator.manual_seed(42)\n",
+        "random.seed(42)"
+      ],
+      "metadata": {
+        "id": "1IqrKBm0FzFy"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we can check if our sampler is doing its job correctly."
+      ],
+      "metadata": {
+        "id": "cdDxZx5bGPSK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.tensor([t[1].sum() for t in iter(train_loader)]).sum()"
+      ],
+      "metadata": {
+        "id": "EVR9aAknGPul",
+        "outputId": "e2537303-159a-4b04-b648-146397ebdd33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(123.)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Close enough! We have 160 images of the positive class, and now, thanks to the\n",
+        "weighted sampler, we’re sampling only 123 of them. \n",
+        "\n",
+        "It means we’re oversampling\n",
+        "the negative class (which has 80 images) to a total of 117 images, adding up to 240\n",
+        "images.\n",
+        "\n",
+        "Mission accomplished, our dataset is balanced now.\n",
+        "\n",
+        "It’s better to be safe than sorry, so we better set yet another seed to ensure the\n",
+        "reproducibility of our code.\n",
+        "\n",
+        "Let’s update it to include more seeds."
+      ],
+      "metadata": {
+        "id": "T9EsYV3GKJsO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def set_seed(self, seed=42):\n",
+        "  torch.backends.cudnn.deterministic = True\n",
+        "  torch.backends.cudnn.benchmark = False    \n",
+        "  torch.manual_seed(seed)\n",
+        "  np.random.seed(seed)\n",
+        "  random.seed(seed)\n",
+        "  try:\n",
+        "      self.train_loader.sampler.generator.manual_seed(seed)\n",
+        "  except AttributeError:\n",
+        "      pass\n",
+        "\n",
+        "setattr(StepByStep, 'set_seed', set_seed)"
+      ],
+      "metadata": {
+        "id": "KwJR_b5lK2Pi"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Putting It Together"
+      ],
+      "metadata": {
+        "id": "RSH2IrYUQhUU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "uzKai9gWQiG_"
       }
     }
   ]
