--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO8TWSl7ageBi1d+BeOrWdQ",
+      "authorship_tag": "ABX9TyMlOoPcuqwy7vEQvN5H7Xqm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,10 +76,23 @@
         "from plots.chapter4 import *"
       ],
       "metadata": {
-        "id": "bRn0N4y8yesU"
+        "id": "bRn0N4y8yesU",
+        "outputId": "df77eea2-617b-498b-d24f-1b236ddb79f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading files from GitHub repo to Colab...\n",
+            "Finished!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -122,7 +135,7 @@
           "height": 17
         },
         "id": "DmgDM3-KyoUv",
-        "outputId": "e7e92b70-5a10-4aa8-daeb-7bed5d1b2cdf"
+        "outputId": "6d60b0bd-4912-4d84-ba2c-1d68476189b2"
       },
       "execution_count": 3,
       "outputs": [
@@ -195,7 +208,7 @@
           "height": 541
         },
         "id": "oWEazRLX1lul",
-        "outputId": "5bd50859-eb86-4255-94ef-cdbb55115e36"
+        "outputId": "319f8c51-acac-4ae5-e801-82c615589df1"
       },
       "execution_count": 5,
       "outputs": [
@@ -276,7 +289,7 @@
           "height": 329
         },
         "id": "12KECyhm4B4B",
-        "outputId": "5475da47-9417-4c18-98f8-149df977ad33"
+        "outputId": "2d6c6258-a28c-4a9b-a5de-2e676262bb94"
       },
       "execution_count": 8,
       "outputs": [
@@ -316,7 +329,7 @@
           "height": 328
         },
         "id": "cj9CKqCW6kI3",
-        "outputId": "76a5e287-9ce7-4708-ed5f-368a38603d94"
+        "outputId": "c8348f41-c9d8-424c-c6d6-8ba9fc908005"
       },
       "execution_count": 10,
       "outputs": [
@@ -361,7 +374,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JMY0-9YY7Rpk",
-        "outputId": "b1c172a6-0778-4a83-845b-173a7cbf5af2"
+        "outputId": "c679e0e4-e316-4791-8c62-2171eeec3010"
       },
       "execution_count": 11,
       "outputs": [
@@ -389,7 +402,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kX1EFQBU7YmD",
-        "outputId": "a28b67f5-c241-45bc-c12a-06d0f11d563a"
+        "outputId": "f72dbbde-090d-4bcd-eca4-853220d3f5ef"
       },
       "execution_count": 12,
       "outputs": [
@@ -432,7 +445,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gqriNhWy8Aoz",
-        "outputId": "b934dc41-da69-490f-b2d2-94393197900a"
+        "outputId": "9e45b1b6-da55-488b-ae95-ef59460c453d"
       },
       "execution_count": 13,
       "outputs": [
@@ -458,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vUTp6OyR8Mxw",
-        "outputId": "edc31acb-f1c4-431b-9125-9729ee560b2b"
+        "outputId": "b5245356-1b3b-4f4c-9636-193c98e2c906"
       },
       "execution_count": 14,
       "outputs": [
@@ -553,7 +566,7 @@
       ],
       "metadata": {
         "id": "fuhfN92n8QEK",
-        "outputId": "1899395e-1015-4fb8-cf03-5cfcc07d90de",
+        "outputId": "51386a1d-dcb1-4315-f98e-20d80d0db1e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -579,7 +592,7 @@
       ],
       "metadata": {
         "id": "LFTvZwXOCilw",
-        "outputId": "630371c9-513c-46bd-ff6d-a39fa2f7c4c1",
+        "outputId": "1d56f1e9-e588-4dd9-d197-5135d90427e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -614,7 +627,7 @@
       ],
       "metadata": {
         "id": "x2kT4tjmCm6k",
-        "outputId": "08e98493-129a-4551-e2b1-a9e27442ab48",
+        "outputId": "ab61c413-16d7-4b21-fc39-1657fe022aee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
@@ -676,7 +689,7 @@
       ],
       "metadata": {
         "id": "iCIdFL-YLcHh",
-        "outputId": "a674f061-cb0e-44f6-bea2-efdd27f90cac",
+        "outputId": "cfe8e4e9-00b8-418f-8470-ea5181847aa0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -728,7 +741,7 @@
       ],
       "metadata": {
         "id": "V6V-hZzUJR0S",
-        "outputId": "cb9ff859-8613-41bd-a4fe-2fe9d0e4e445",
+        "outputId": "2837b74e-64e4-45d6-fdae-2e03d9debff4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -788,7 +801,7 @@
       ],
       "metadata": {
         "id": "z7bk2ZrOM6-Y",
-        "outputId": "b089f2aa-895d-4b1f-8cd0-a484089ed065",
+        "outputId": "0ee2c1bc-ccde-49cc-8911-dafba502a3e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -851,7 +864,7 @@
       ],
       "metadata": {
         "id": "egvC-crYOF4k",
-        "outputId": "3e34ce20-754c-4357-a8f0-5f23c903b5f8",
+        "outputId": "c1f286e4-4608-41d1-d3df-ab8e328e38ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -879,7 +892,7 @@
       ],
       "metadata": {
         "id": "HGyk1qXSPcoM",
-        "outputId": "02850443-5298-41dc-8d98-5e5d81b521ad",
+        "outputId": "38ab23bd-f57b-4123-bf1d-405147e31c70",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -924,7 +937,7 @@
       ],
       "metadata": {
         "id": "CN72TS-cP1fr",
-        "outputId": "5a0a9492-2021-43ad-9606-4f7afe4d28d7",
+        "outputId": "6eb58417-b939-45bd-8ec8-071fa24339cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1105,7 +1118,7 @@
       ],
       "metadata": {
         "id": "wukiAlA0xpvu",
-        "outputId": "4bfba843-621f-4946-be49-3a7615dc5294",
+        "outputId": "d83ceeb4-fca9-44ee-9bac-a1dff9c6e9a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1116,7 +1129,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch.utils.data.dataset.Subset at 0x7fa351e464f0>"
+              "<torch.utils.data.dataset.Subset at 0x7f5997b022b0>"
             ]
           },
           "metadata": {},
@@ -1131,7 +1144,7 @@
       ],
       "metadata": {
         "id": "NYLzlM25x2HX",
-        "outputId": "4ef7eeec-3244-48b0-cab3-3d4b0ae31939",
+        "outputId": "566fae31-f3ef-4ac8-83c1-cd08dda43a32",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1215,7 +1228,7 @@
       ],
       "metadata": {
         "id": "Nw1igOyhzCfd",
-        "outputId": "be514785-b520-46f3-99c7-038bb776f719",
+        "outputId": "e8d817d5-16f2-4c4e-d70e-b4e0bce80ea5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1332,7 +1345,7 @@
       "metadata": {
         "id": "QmgEtHM48a8t"
       },
-      "execution_count": 53,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1371,12 +1384,12 @@
       ],
       "metadata": {
         "id": "NxsIACfA9H32",
-        "outputId": "df7675fc-ba38-4366-9d6e-71be6cfe6817",
+        "outputId": "42db2672-bce4-429b-e6ab-52dca2ea6d83",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1404,12 +1417,12 @@
       ],
       "metadata": {
         "id": "2IcKdRkz9rNU",
-        "outputId": "7ccac2be-417a-48a3-f59d-a547fc78148f",
+        "outputId": "74d604c5-ce91-4123-9e46-65eecceda67b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1419,7 +1432,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 37
         }
       ]
     },
@@ -1448,12 +1461,12 @@
       ],
       "metadata": {
         "id": "3NZ_vKgO_6r3",
-        "outputId": "93c993d5-4b77-464e-a4ff-a1e566c512b7",
+        "outputId": "5bb9d5a0-b6c1-4e5e-c9ff-0817915b9241",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1493,7 +1506,7 @@
       "metadata": {
         "id": "jZetaJs_BF2s"
       },
-      "execution_count": 57,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1514,7 +1527,7 @@
       "metadata": {
         "id": "Gxwfii27EBod"
       },
-      "execution_count": 58,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1547,7 +1560,7 @@
       "metadata": {
         "id": "N3cwuL9eEqH-"
       },
-      "execution_count": 59,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1558,7 +1571,7 @@
       "metadata": {
         "id": "0LBFk6eWFcp6"
       },
-      "execution_count": 60,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1580,7 +1593,7 @@
       "metadata": {
         "id": "1IqrKBm0FzFy"
       },
-      "execution_count": 61,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1599,12 +1612,12 @@
       ],
       "metadata": {
         "id": "EVR9aAknGPul",
-        "outputId": "e2537303-159a-4b04-b648-146397ebdd33",
+        "outputId": "c434e509-b439-44fa-cc0c-05143efd8b7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 62,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1614,7 +1627,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 44
         }
       ]
     },
@@ -1658,7 +1671,7 @@
       "metadata": {
         "id": "KwJR_b5lK2Pi"
       },
-      "execution_count": 63,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -1672,9 +1685,170 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "We’ve gone through a lot of things regarding the data preparation step. \n",
+        "\n",
+        "Let’s put\n",
+        "them all together to get a better view of the big picture here."
+      ],
       "metadata": {
         "id": "uzKai9gWQiG_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Builds tensors from numpy arrays BEFORE split\n",
+        "# Modifies the scale of pixel values from [0, 255] to [0, 1]\n",
+        "x_tensor = torch.as_tensor(images / 255).float()\n",
+        "y_tensor = torch.as_tensor(labels.reshape(-1, 1)).float()\n",
+        "\n",
+        "# Uses index_splitter to generate indices for training and validation sets\n",
+        "train_idx, val_idx = index_splitter(len(x_tensor), [80, 20])\n",
+        "# Uses indices to perform the split\n",
+        "x_train_tensor = x_tensor[train_idx]\n",
+        "y_train_tensor = y_tensor[train_idx]\n",
+        "x_val_tensor = x_tensor[val_idx]\n",
+        "y_val_tensor = x_tensor[val_idx]\n",
+        "\n",
+        "# Builds different composers because of data augmentation on training set\n",
+        "train_composer = Compose([\n",
+        "    RandomHorizontalFlip(p=.5),\n",
+        "    Normalize(mean=(.5,), std=(.5,))\n",
+        "])\n",
+        "val_composer = Compose([Normalize(mean=(.5,), std=(.5,))])\n",
+        "\n",
+        "# Uses custom dataset to apply composed transforms to each set\n",
+        "train_dataset = TransformedDataset(x_train_tensor, y_train_tensor, transform=train_composer)\n",
+        "val_dataset = TransformedDataset(x_val_tensor, y_val_tensor, transform=val_composer)\n",
+        "\n",
+        "# Builds a weighted random sampler to handle imbalanced classes\n",
+        "weighted_sampler = make_balanced_sampler(y_train_tensor)\n",
+        "\n",
+        "# Uses sampler in the training set to get a balanced data loader\n",
+        "train_loader = DataLoader(dataset=train_dataset, batch_size=16, sampler=weighted_sampler)\n",
+        "val_loader = DataLoader(dataset=val_dataset, batch_size=16)"
+      ],
+      "metadata": {
+        "id": "2RwKhjQlP9sE"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Pixels as Features"
+      ],
+      "metadata": {
+        "id": "mVQm_7_vcfa8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s take one mini-batch of images from our training set to illustrate how it works."
+      ],
+      "metadata": {
+        "id": "y0Q7jOVXcgMR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dummy_xs, dummy_ys = next(iter(train_loader))\n",
+        "dummy_xs.shape"
+      ],
+      "metadata": {
+        "id": "sRCTw97gcixs",
+        "outputId": "7d51debd-c668-478d-b716-bb8fd149d0d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([16, 1, 5, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Our dummy mini-batch has 16 images, one channel each, dimensions five-by-five\n",
+        "pixels. \n",
+        "\n",
+        "What if we flatten this mini-batch?"
+      ],
+      "metadata": {
+        "id": "KfSg3jedcuIr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flattener = nn.Flatten()\n",
+        "dummy_xs_flat = flattener(dummy_xs)\n",
+        "\n",
+        "print(dummy_xs_flat.shape)\n",
+        "print(dummy_xs_flat[0])"
+      ],
+      "metadata": {
+        "id": "oIzmOlk7cvbs",
+        "outputId": "1e14df55-a08b-40ca-8ad2-dbafb5bc1e4f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([16, 25])\n",
+            "tensor([-1., -1., -1.,  1., -1., -1., -1., -1.,  1., -1., -1., -1., -1.,  1.,\n",
+            "        -1., -1., -1., -1.,  1., -1., -1., -1., -1.,  1., -1.])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "By default, it preserves the first dimension such that we keep the number of data\n",
+        "points in the mini-batch, but it collapses the remaining dimensions.\n",
+        "\n",
+        ">Don’t we lose information when we flatten pixels?\n",
+        "\n",
+        "Sure we do! And that’s why convolutional neural networks (CNNs) are so successful: They do not lose this information.\n"
+      ],
+      "metadata": {
+        "id": "-Ix7cUaqeUvQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Shallow Model"
+      ],
+      "metadata": {
+        "id": "4SAcXM29e103"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "-ppB_UBge24y"
       }
     }
   ]
