--- a/inside-deep-learing/10-attention-mechanisms/01_attention_mechanisms.ipynb
+++ b/inside-deep-learing/10-attention-mechanisms/01_attention_mechanisms.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjAve1jM8g29da5Wvuij+v",
+      "authorship_tag": "ABX9TyNYieeTzzj100IJs3UVMtxX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "_9xoD7-8EibG"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "8U1JNhEmEkzG"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "YTO1Pk4x24PP"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "nXiYSSxO707X"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "rsFqIimT7L9B"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +268,7 @@
       "metadata": {
         "id": "SosIhpxes8xQ"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
           "height": 230
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
       "metadata": {
         "id": "_WbqbWoTMYWx"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +373,7 @@
       "metadata": {
         "id": "8HIiIgjPTfoU"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,7 +424,7 @@
           "height": 296
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "7fFDCJfBCoDP"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -531,7 +531,7 @@
       "metadata": {
         "id": "4buCXAkPEa4a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,7 +552,7 @@
       "metadata": {
         "id": "_eZ8Z0vGMFo8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +572,7 @@
       "metadata": {
         "id": "Fm0HYlNSZ85S"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "L58plPadbHFh"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -661,7 +661,7 @@
           "height": 298
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,7 +729,7 @@
           "height": 254
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -836,7 +836,7 @@
       "metadata": {
         "id": "A5lu3cDZMwFR"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,9 +869,9 @@
         "class GeneralScore(nn.Module):\n",
         "  def __init__(self, H):\n",
         "    \"\"\"\n",
-        "    H: the number of dimensions coming into the dot score\n",
+        "    H: the number of dimensions coming into the GeneralScore score\n",
         "    \"\"\"\n",
-        "    super(DotScore, self).__init__()\n",
+        "    super(GeneralScore, self).__init__()\n",
         "    self.H = H\n",
         "    self.W = nn.Bilinear(H, H, 1)\n",
         "\n",
@@ -890,7 +890,7 @@
       "metadata": {
         "id": "8e17iyn5TRk0"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -904,10 +904,62 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The idea behind the additive layer is fairly simple: let a small neural network figure\n",
+        "out the weighting for us."
+      ],
       "metadata": {
         "id": "wy2AdTRhXLSl"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class AdditiveAttentionScore(nn.Module):\n",
+        "  def __init__(self, H):\n",
+        "    \"\"\"\n",
+        "    H: the number of dimensions coming into the AdditiveAttentionScore\n",
+        "    \"\"\"\n",
+        "    super(AdditiveAttentionScore, self).__init__()\n",
+        "    self.v = nn.Linear(H, 1)\n",
+        "    self.W = nn.Linear(2 * H, H)  # 2*H because we are going to concatenate two inputs\n",
+        "\n",
+        "  def forward(self, states, context):\n",
+        "    \"\"\"\n",
+        "    states: (B, T, H) shape\n",
+        "    context: (B, H) shape\n",
+        "    output: (B, T, 1), giving a score to each of the T items based on the context\n",
+        "    \"\"\"\n",
+        "    T = states.size(1)\n",
+        "    # Repeating the values T times \n",
+        "    context = torch.stack([context for _ in range(T)], dim=1)  # (B, H) -> (B, T, H)\n",
+        "    state_context_combined = torch.cat((states, context), dim=2)  # (B, T, H) + (B, T, H)  -> (B, T, 2*H)\n",
+        "    scores = self.v(torch.tanh(self.W(state_context_combined)))  # (B, T, H) -> (B, T, 1)\n",
+        "    return scores "
+      ],
+      "metadata": {
+        "id": "CkcGTG0VdcsA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Computing attention weights"
+      ],
+      "metadata": {
+        "id": "rLaU_2HHgjoI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wu1tWctngkmB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
